Added section two and three

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     <div id="box"> </div>
     <div id="box"> </div>
   </div>
+    <div id="bigbox2">
+    <div> <p> this is some subtext under an illustration or image</p> </div>
+    <div> <p> this is some subtext under an illustration or image</p> </div>
+    <div> <p> this is some subtext under an illustration or image</p> </div>
+    <div> <p> this is some subtext under an illustration or image</p> </div>
+  </div>
 
 </div>
 
@@ -58,9 +64,13 @@
 <!-- Section three with a quote box-->
 
 <div id="sectionthree"> 
-  
-  <div> </div>
-
+<div id="quote">
+  <figure>
+    <blockquote cite="https://www.huxley.net/bnw/four.html">
+        <p>This is an inspiring quote or testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </p>
+    </blockquote>
+    <figcaption>Thor, God of Thunder</figcaption>
+</figure></div>
 
 </div>
 
@@ -70,7 +80,11 @@
 <!-- footer with a sign up button and blue box inside-->
 
 <div id="footer"> 
-  <div> </div>
+  <div>
+  <h3 style="color: white;"> Call to action! It's time!</h3> 
+  <p> Sign up for our product by clicking that button over there</p>
+  <a class="my-button" href="#">Sign Up</a></div>
+  
 
 
 </div>
